alignment, chromatograph map jumping, 'fixed' vertical scrolling.

--- a/public/stylesheets/components/_chromatograph_map.scss
+++ b/public/stylesheets/components/_chromatograph_map.scss
@@ -5,10 +5,31 @@
 
 .chromatograph-map-cursor {
   position: absolute;
-  background-color: black;
   height: 100%;
   width: 1px;
   left: 0;
+
+  .cursor-marker {
+    width: 100%;
+    height: 100%;
+
+    background-color: black;
+    border: 1px solid black;
+    opacity: 0.3;
+  }
+
+  .cursor-start {
+    z-index: 100;
+
+    position: absolute;
+    background-color: white;
+    top: 0;
+    left: 0;
+    margin: 3px;
+    padding: 2px;
+    color: black;
+  }
+
 }
 
 .chromatograph-map {
@@ -35,6 +56,16 @@
     right: 0;
     top: 0;
 
+  }
+
+  .chromatograph-map-defect-mark {
+    position: absolute;
+
+    top: 30px;
+
+    height: 10px;
+    width: 10px;
+    background-color: red;
   }
 
   .chromatograph-map-fragment {
